# pfc-otel-collector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pfc_otel_collector.py  pyproject.toml
config/: config.toml
tests/: e2e_integration_test.py  test_otel_collector.py  test_resilience.py
