[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "pfc-otel-collector"
version         = "0.1.0"
description     = "OpenTelemetry Collector exporter for PFC-JSONL log compression"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
keywords        = ["opentelemetry", "otlp", "logs", "compression", "pfc-jsonl", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "pytest-cov>=5.0"]

[project.scripts]
pfc-otel-collector = "pfc_otel_collector:main"

[project.urls]
Homepage   = "https://github.com/ImpossibleForge/pfc-otel-collector"
Repository = "https://github.com/ImpossibleForge/pfc-otel-collector"
